Fix scroll when there are too much users

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -280,6 +280,10 @@ h3, h4 {
 
   .panel {
     display: block;
+    &-content {
+      max-height: 100vh;
+      overflow-y: scroll;
+    }
     &-sidebar {
       width: 100%;
     }
